trying to fix width on mobile

--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ body {
     body, html {
         margin: 0;
         padding: 0;
+        width: 100vw;
         height: 100%;
         background-image: url("background.png");
         background-color: lightblue;
